# anvil

./: .dockerignore  .env.local.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  vitest.config.ts
.claude/: AUDIT-2026-04-27.md
.github/workflows/: ci.yml  release.yml  tauri-build.yml
apps/api/: next.config.ts  package.json  vercel.json  vitest.config.ts
apps/api/src/: middleware.ts
apps/desktop/: next.config.ts  package.json  playwright.config.ts  vercel.json  vitest.config.ts
apps/desktop/e2e/: audit-auth.spec.ts  (+25 more)
apps/desktop/e2e-tauri/: .gitignore  fixtures.ts  global-setup.ts  global-teardown.ts  playwright-tauri.config.ts
apps/desktop/src-tauri/: Cargo.toml  Info.plist  build.rs  entitlements.plist  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json  e2e.json.template
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: audio.rs  lib.rs  main.rs
apps/desktop/src-tauri/webview-stub/: index.html
apps/marketing/: next.config.ts  package.json  playwright.config.ts  tsconfig.json  vercel.json  vitest.config.ts
e2e/: auth.spec.ts  billing.spec.ts  dashboard.spec.ts  global-setup.ts  pricing.spec.ts  workspace.spec.ts
e2e/helpers/: db.ts
src/: middleware.ts  proxy.ts
src/__tests__/: analyst-prompts.test.ts  contact-import.test.ts  copilot-prompts.test.ts  discovery-column.test.tsx  discovery-nodes.test.ts  discovery-prompts.test.ts  interview-column.test.tsx  interview-workspace.test.tsx  outreach-column.test.tsx  outreach-nodes.test.ts  outreach-prompts.test.ts  prototype-build-status.test.tsx  prototype-github.test.ts  prototype-nodes.test.ts  prototype-prompts.test.ts  prototype-sandbox.test.ts  prototype-workflow.test.ts  synthesis-prompts.test.ts
src/app/: globals.css  layout.tsx  page.tsx
src/components/: analyst-column.tsx  archetype-setup.tsx  discovery-column.tsx  generate-brief-button.tsx  interview-column.tsx  new-interview-form.tsx  new-project-form.tsx  outreach-column.tsx  project-card.tsx  prototype-build-status.tsx  sidebar.tsx  synthesis-column.tsx
src/lib/: apollo.ts  contact-import.ts  deepgram.ts  github.ts  llm.ts  prototype-status.ts  resend.ts  sandbox.ts  tavily.ts  vercel.ts
supabase/migrations/: 005_subscriptions.sql  008_contact_imports.sql  009_remove_outreach.sql  010_add_brief_calendar.sql  010_calendar_and_sources.sql  012_analyst_customer_language.sql  013_relax_scheduled_at.sql  014_recordings_bucket.sql  015_analyst_run_count.sql  016_oauth_states.sql
(+204 files in other folders)
